<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginBottom="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    android:background="@color/carditem"
    android:gravity="center" >

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/optionRadioGroup"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:drawableRight="@drawable/ic_action_next_item"
        android:gravity="center"
        android:text="@string/optionScreenText"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/optionRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startButton"
        android:layout_alignLeft="@+id/optionMsg"
        android:layout_marginBottom="21dp" >

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/radioButton2" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/radioButton3" />
    </RadioGroup>

    <TextView
        android:id="@+id/optionMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/optionRadioGroup"
        android:layout_centerHorizontal="true"
        android:text="@string/optionString"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_above="@+id/optionMsg"
        android:layout_alignLeft="@+id/startButton"
        android:layout_alignRight="@+id/startButton"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/great_sunflower" />

    <ImageView
        android:id="@+id/helpIcon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@+id/optionMsg"
        android:layout_alignRight="@+id/imageView1"
        android:layout_alignTop="@+id/optionMsg"
        android:background="@drawable/roundshape"
        android:src="@drawable/ic_action_help" />

</RelativeLayout>