<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    android:background="@color/carditem" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:id="@+id/tablelayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp" >

            <TableRow
                android:layout_marginBottom="10dp"
                android:gravity="center" >

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/abouttext1"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/abouttext2"
                    android:textSize="12sp" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/listbackground" />

            <TableRow
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/abouttext3"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/abouttext4"
                    android:textSize="12sp" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/listbackground" />

            <TableRow
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/abouttext5"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/text6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/abouttext6"
                    android:textSize="12sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>